find_package(pprint CONFIG REQUIRED)

add_executable(p001_two_sum p001_two_sum.cpp)
add_executable(p015_3Sum p015_3Sum.cpp)
add_executable(p017_phone_number p017_phone_number.cpp)
add_executable(p018_4Sum p018_4Sum.cpp)
add_executable(p019_remove_node p019_remove_node.cpp)
add_executable(p020_parenthess p020_parenthess.cpp)
add_executable(p024_swap_node p024_swap_node.cpp)
add_executable(p027_remove_element p027_remove_element.cpp)
add_executable(p028_strStr p028_strStr.cpp)
add_executable(p035_searchInsert p035_searchInsert.cpp)
add_executable(p037_solveSudoku p037_solveSudoku.cpp)
add_executable(p037_solveSudoku_1 p037_solveSudoku_1.cpp)
add_executable(p039_combinationSum p039_combinationSum.cpp)
add_executable(p040_combinationSum2 p040_combinationSum2.cpp)

target_link_libraries(p015_3Sum PRIVATE pprint::pprint)
target_link_libraries(p017_phone_number PRIVATE pprint::pprint)
target_link_libraries(p018_4Sum PRIVATE pprint::pprint)
target_link_libraries(p019_remove_node PRIVATE pprint::pprint)
target_link_libraries(p020_parenthess PRIVATE pprint::pprint)
target_link_libraries(p024_swap_node PRIVATE pprint::pprint)
target_link_libraries(p027_remove_element PRIVATE pprint::pprint)
target_link_libraries(p028_strStr PRIVATE pprint::pprint)
target_link_libraries(p035_searchInsert PRIVATE pprint::pprint)
target_link_libraries(p037_solveSudoku PRIVATE pprint::pprint)
target_link_libraries(p037_solveSudoku_1 PRIVATE pprint::pprint)
target_link_libraries(p039_combinationSum PRIVATE pprint::pprint)
target_link_libraries(p040_combinationSum2 PRIVATE pprint::pprint)